# mavel

./: CMakeLists.txt  README.md
include/mavel/: component_underlying_type.hpp  operation_set.hpp  operation_set_selector.hpp  simd_iffast.hpp  simd_type_selector.hpp  vector.hpp
include/mavel/detail/: component_underlying_type.hpp  operation_set_selector.hpp  simd_type_selector.hpp
test/static/: default.cpp
